--- a/index.html
+++ b/index.html
@@ -107,7 +107,50 @@
                 </ul>
               </div>
         </section>
-
+        <!-- ABOUT SECTION-->
+        <section class="About">
+            <div class="container-about">
+                <!-- Tarjeta 1-->
+                <figure class="Aboutcard">
+                    <button class="button-coffee" type="button">CAFE</button>
+                    <h3>Chicago</h3>
+                    <p class="text-card">eFusce ut velit laoreet, tempus arcu molestie vulputate</p>  
+                    <hr class="separador"/>  
+                    <h3>Monday - Friday</h3>   
+                    <p class="hour-card">06:00 AM - 10:00 PM</p> 
+                    <h3>Saturday - Sunday</h3>   
+                    <p class="hour-card">08:00 AM - 16:00 PM</p> 
+                    <hr class="separador"/> 
+                    <p class ="contact-card">+61(0) 383 766 284 noreply@envato.com<p> 
+                </figure>
+                <!-- Tarjeta 2-->
+                <figure class="Aboutcard">
+                    <button class="button-green" type="button">FOOD TRUCKS</button>
+                    <h3>Los Angeles</h3>
+                    <p class="text-card">Fusce ut velit laoreet, tempus arcu molestie vulputate</p> 
+                    <hr class="separador"/>  
+                    <h3>Monday - Friday</h3>   
+                    <p class="hour-card">06:00 AM - 10:00 PM</p>
+                    <h3>Saturday - Sunday</h3>   
+                    <p class="hour-card">08:00 AM - 16:00 PM</p>  
+                    <hr class="separador"/>   
+                    <p class ="contact-card">+61(0) 383 766 284 noreply@envato.com<p>  
+                </figure>
+                <!-- Tarjeta 3-->
+                <figure class="Aboutcard">
+                    <button class="button-coffee" type="button">CAFE</button>
+                    <h3>New York</h3>
+                    <p class="text-card">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                    <hr class="separador"/> 
+                    <h3>Monday - Friday</h3>
+                    <p class="hour-card">06:00 AM - 10:00 PM</p>
+                    <h3>Saturday - Sunday</h3>   
+                    <p class="hour-card">08:00 AM - 16:00 PM</p> 
+                    <hr class="separador"/>
+                    <p class ="contact-card">+61(0) 383 766 284 noreply@envato.com<p>   
+                </figure>
+             </div>
+        </section>
     </main>
     <footer>
         
