modfly css and index

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
             <div class="col-2 ">
                 <img src="img/slider_pic3.png" alt="Icecream">
+                <div class="icon-circle-icon1 with-bg"></div>
             </div>
 
             <div class="col-3">
